fix block-2 relize flex-wrap all element in block

--- a/components/stylesheet/style.css
+++ b/components/stylesheet/style.css
@@ -181,6 +181,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
     gap: 120px;
     padding-left: 7%;
     padding-right: 7%;
@@ -192,6 +193,7 @@ header {
     margin-top: 120px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 150px;
     text-align: center;
 }
@@ -223,11 +225,12 @@ header {
     /* border: solid green; */
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 100px;
     align-items: center;
     max-width: 1250px;
-    height: 472px;
+    /* height: 472px; */
     margin-bottom: 120px;
 }
 
